<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.DashboardActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_Hello"
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/purple_200"
            android:padding="20dp">

            <ImageView
                android:id="@+id/img_hello"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/hello" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_hello"
                android:fontFamily="@font/montserrat_r"
                android:text="@string/welcome_to_cat_facts"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/nunito_b"
        android:text="@string/our_menu_s"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <GridLayout
        android:columnCount="4"
        android:rowCount="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_random"
            android:foreground="?attr/selectableItemBackground"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="16dp">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/ic_1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/random_fact"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_all"
            android:foreground="?attr/selectableItemBackground"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="16dp">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/smile"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all_random_fact"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_breed"
            android:foreground="?attr/selectableItemBackground"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="16dp">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/cat"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breed"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </GridLayout>

<androidx.cardview.widget.CardView
    android:layout_margin="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="20dp"
    >

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/layer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_200"
        android:padding="20dp"
        >


        <ImageView
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:background="@drawable/ic_undraw_social_ideas_re_j5v4" />
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_r"
            android:text="@string/suggestion"
            android:textColor="@color/white"/>
    </LinearLayout>


</androidx.cardview.widget.CardView>


</LinearLayout>